// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Progress > should render correct thickness 1`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="50"
    class="relative h-1 w-full overflow-hidden rounded-[99999px] bg-neutral-300 svelte-vitbtr"
    data-max="100"
    data-melt-progress=""
    data-state="loading"
    data-value="50"
    max="100"
    role="meter"
  >
    <div
      class="progress-bar h-full w-full bg-primary transition-transform ease-[cubic-bezier(0.65,0,0.35,1)] svelte-vitbtr"
      style="--progress-translate: -50%; --progress-delay: 0ms; --progress-duration: 0ms;"
    />
  </div>
  
</div>
`;

exports[`Progress > should render correct thickness 2`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="50"
    class="relative h-1.5 w-full overflow-hidden rounded-[99999px] bg-neutral-300 svelte-vitbtr"
    data-max="100"
    data-melt-progress=""
    data-state="loading"
    data-value="50"
    max="100"
    role="meter"
  >
    <div
      class="progress-bar h-full w-full bg-primary transition-transform ease-[cubic-bezier(0.65,0,0.35,1)] svelte-vitbtr"
      style="--progress-translate: -50%; --progress-delay: 0ms; --progress-duration: 0ms;"
    />
  </div>
  
</div>
`;

exports[`Progress > should render correct thickness 3`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="50"
    class="relative h-2 w-full overflow-hidden rounded-[99999px] bg-neutral-300 svelte-vitbtr"
    data-max="100"
    data-melt-progress=""
    data-state="loading"
    data-value="50"
    max="100"
    role="meter"
  >
    <div
      class="progress-bar h-full w-full bg-primary transition-transform ease-[cubic-bezier(0.65,0,0.35,1)] svelte-vitbtr"
      style="--progress-translate: -50%; --progress-delay: 0ms; --progress-duration: 0ms;"
    />
  </div>
  
</div>
`;

exports[`Progress > should render correct transition delay 1`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="50"
    class="relative h-2 w-full overflow-hidden rounded-[99999px] bg-neutral-300 svelte-vitbtr"
    data-max="100"
    data-melt-progress=""
    data-state="loading"
    data-value="50"
    max="100"
    role="meter"
  >
    <div
      class="progress-bar h-full w-full bg-primary transition-transform ease-[cubic-bezier(0.65,0,0.35,1)] svelte-vitbtr"
      style="--progress-translate: -50%; --progress-delay: 1ms; --progress-duration: 0ms;"
    />
  </div>
  
</div>
`;

exports[`Progress > should render correct transition delay 2`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="50"
    class="relative h-2 w-full overflow-hidden rounded-[99999px] bg-neutral-300 svelte-vitbtr"
    data-max="100"
    data-melt-progress=""
    data-state="loading"
    data-value="50"
    max="100"
    role="meter"
  >
    <div
      class="progress-bar h-full w-full bg-primary transition-transform ease-[cubic-bezier(0.65,0,0.35,1)] svelte-vitbtr"
      style="--progress-translate: -50%; --progress-delay: 2ms; --progress-duration: 0ms;"
    />
  </div>
  
</div>
`;

exports[`Progress > should render correct transition delay 3`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="50"
    class="relative h-2 w-full overflow-hidden rounded-[99999px] bg-neutral-300 svelte-vitbtr"
    data-max="100"
    data-melt-progress=""
    data-state="loading"
    data-value="50"
    max="100"
    role="meter"
  >
    <div
      class="progress-bar h-full w-full bg-primary transition-transform ease-[cubic-bezier(0.65,0,0.35,1)] svelte-vitbtr"
      style="--progress-translate: -50%; --progress-delay: 20ms; --progress-duration: 0ms;"
    />
  </div>
  
</div>
`;

exports[`Progress > should render correct transition delay 4`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="50"
    class="relative h-2 w-full overflow-hidden rounded-[99999px] bg-neutral-300 svelte-vitbtr"
    data-max="100"
    data-melt-progress=""
    data-state="loading"
    data-value="50"
    max="100"
    role="meter"
  >
    <div
      class="progress-bar h-full w-full bg-primary transition-transform ease-[cubic-bezier(0.65,0,0.35,1)] svelte-vitbtr"
      style="--progress-translate: -50%; --progress-delay: 20.5ms; --progress-duration: 0ms;"
    />
  </div>
  
</div>
`;

exports[`Progress > should render correct transition delay 5`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="50"
    class="relative h-2 w-full overflow-hidden rounded-[99999px] bg-neutral-300 svelte-vitbtr"
    data-max="100"
    data-melt-progress=""
    data-state="loading"
    data-value="50"
    max="100"
    role="meter"
  >
    <div
      class="progress-bar h-full w-full bg-primary transition-transform ease-[cubic-bezier(0.65,0,0.35,1)] svelte-vitbtr"
      style="--progress-translate: -50%; --progress-delay: -10ms; --progress-duration: 0ms;"
    />
  </div>
  
</div>
`;

exports[`Progress > should render correct transition delay 6`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="50"
    class="relative h-2 w-full overflow-hidden rounded-[99999px] bg-neutral-300 svelte-vitbtr"
    data-max="100"
    data-melt-progress=""
    data-state="loading"
    data-value="50"
    max="100"
    role="meter"
  >
    <div
      class="progress-bar h-full w-full bg-primary transition-transform ease-[cubic-bezier(0.65,0,0.35,1)] svelte-vitbtr"
      style="--progress-translate: -50%; --progress-delay: 0ms; --progress-duration: 0ms;"
    />
  </div>
  
</div>
`;

exports[`Progress > should render correct transition duration 1`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="50"
    class="relative h-2 w-full overflow-hidden rounded-[99999px] bg-neutral-300 svelte-vitbtr"
    data-max="100"
    data-melt-progress=""
    data-state="loading"
    data-value="50"
    max="100"
    role="meter"
  >
    <div
      class="progress-bar h-full w-full bg-primary transition-transform ease-[cubic-bezier(0.65,0,0.35,1)] svelte-vitbtr"
      style="--progress-translate: -50%; --progress-delay: 0ms; --progress-duration: 1ms;"
    />
  </div>
  
</div>
`;

exports[`Progress > should render correct transition duration 2`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="50"
    class="relative h-2 w-full overflow-hidden rounded-[99999px] bg-neutral-300 svelte-vitbtr"
    data-max="100"
    data-melt-progress=""
    data-state="loading"
    data-value="50"
    max="100"
    role="meter"
  >
    <div
      class="progress-bar h-full w-full bg-primary transition-transform ease-[cubic-bezier(0.65,0,0.35,1)] svelte-vitbtr"
      style="--progress-translate: -50%; --progress-delay: 0ms; --progress-duration: 2ms;"
    />
  </div>
  
</div>
`;

exports[`Progress > should render correct transition duration 3`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="50"
    class="relative h-2 w-full overflow-hidden rounded-[99999px] bg-neutral-300 svelte-vitbtr"
    data-max="100"
    data-melt-progress=""
    data-state="loading"
    data-value="50"
    max="100"
    role="meter"
  >
    <div
      class="progress-bar h-full w-full bg-primary transition-transform ease-[cubic-bezier(0.65,0,0.35,1)] svelte-vitbtr"
      style="--progress-translate: -50%; --progress-delay: 0ms; --progress-duration: 20ms;"
    />
  </div>
  
</div>
`;

exports[`Progress > should render correct transition duration 4`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="50"
    class="relative h-2 w-full overflow-hidden rounded-[99999px] bg-neutral-300 svelte-vitbtr"
    data-max="100"
    data-melt-progress=""
    data-state="loading"
    data-value="50"
    max="100"
    role="meter"
  >
    <div
      class="progress-bar h-full w-full bg-primary transition-transform ease-[cubic-bezier(0.65,0,0.35,1)] svelte-vitbtr"
      style="--progress-translate: -50%; --progress-delay: 0ms; --progress-duration: 20.5ms;"
    />
  </div>
  
</div>
`;

exports[`Progress > should render correct transition duration 5`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="50"
    class="relative h-2 w-full overflow-hidden rounded-[99999px] bg-neutral-300 svelte-vitbtr"
    data-max="100"
    data-melt-progress=""
    data-state="loading"
    data-value="50"
    max="100"
    role="meter"
  >
    <div
      class="progress-bar h-full w-full bg-primary transition-transform ease-[cubic-bezier(0.65,0,0.35,1)] svelte-vitbtr"
      style="--progress-translate: -50%; --progress-delay: 0ms; --progress-duration: -10ms;"
    />
  </div>
  
</div>
`;

exports[`Progress > should render correct transition duration 6`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="50"
    class="relative h-2 w-full overflow-hidden rounded-[99999px] bg-neutral-300 svelte-vitbtr"
    data-max="100"
    data-melt-progress=""
    data-state="loading"
    data-value="50"
    max="100"
    role="meter"
  >
    <div
      class="progress-bar h-full w-full bg-primary transition-transform ease-[cubic-bezier(0.65,0,0.35,1)] svelte-vitbtr"
      style="--progress-translate: -50%; --progress-delay: 0ms; --progress-duration: 0ms;"
    />
  </div>
  
</div>
`;
